--- a/mp-starter/src/main/resources/templates/analysis/biological.html
+++ b/mp-starter/src/main/resources/templates/analysis/biological.html
@@ -42,11 +42,12 @@
                         </div>
                         <div class="columns pull-right">
                             <button class="btn btn-success" onclick="reLoad()">查询</button>
+                            <button class="btn btn-success" onclick="showCharts()">展示图表</button>
                         </div>
 
                         <div class="columns pull-right col-md-2 nopadding">
                             <input id="searchName" type="text" class="form-control"
-                                   placeholder="姓名">
+                                   placeholder="">
                         </div>
                     </div>
                     <table id="exampleTable" data-mobile-responsive="true">
