--- a/mp-starter/src/main/resources/templates/analysis/biological.html
+++ b/mp-starter/src/main/resources/templates/analysis/biological.html
@@ -35,19 +35,21 @@
                                 <iframe name="hiddenFrame" style="display:none"></iframe>
                                 <input id="sub" type="submit" value="提交">
                             </form>
-                            <button shiro:hasPermission="sys:user:batchRemove" type="button"
-                                    class="btn  btn-danger" onclick="batchRemove()">
-                                <i class="fa fa-trash hidden" aria-hidden="true"></i>删除
-                            </button>
+
                         </div>
                         <div class="columns pull-right">
                             <button class="btn btn-success" onclick="reLoad()">查询</button>
+
                             <button class="btn btn-success" onclick="showCharts()">展示图表</button>
+
                         </div>
 
                         <div class="columns pull-right col-md-2 nopadding">
                             <input id="searchName" type="text" class="form-control"
                                    placeholder="">
+                        </div>
+                        <div class="columns pull-right col-md-3 nopadding">
+                            <a href="/analysis/biological/downLoadTmp" download="download">..下载上传模板</a>
                         </div>
                     </div>
                     <table id="exampleTable" data-mobile-responsive="true">
