--- a/mp-starter/src/main/resources/templates/analysis/biological.html
+++ b/mp-starter/src/main/resources/templates/analysis/biological.html
@@ -24,7 +24,7 @@
         <div class="col-sm-12">
             <div class="ibox">
                 <div class="ibox-body">
-                    <div class="fixed-table-toolbar">
+                    <div  class="fixed-table-toolbar">
                         <div class="columns pull-left">
                             <form action="/analysis/biological/uploadExcel/biological" id="excelFile" name="excelFile" method="POST" target="hiddenFrame" enctype="multipart/form-data">
 
@@ -52,6 +52,8 @@
                             <a href="/analysis/biological/downLoadTmp" download="download">..下载上传模板</a>
                         </div>
                     </div>
+                    <div id="toolbar" role="group">
+                    </div>
                     <table id="exampleTable" data-mobile-responsive="true">
                     </table>
                 </div>
@@ -71,6 +73,17 @@
     </div>
 </div>
 <div th:include="include :: footer"></div>
+
+<script type="text/javascript" src="/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/js/plugins/bootstrap-table/bootstrap-table.min.js"></script>
+<script type="text/javascript" src="/js/plugins/bootstrap-table/export/bootstrap-table-export.js"></script>
+
+<script type="text/javascript" src="/js/plugins/bootstrap-table/export/FileSaver.js"></script>
+
+<script type="text/javascript" src="/js/plugins/bootstrap-table/export/tableExport.min.js"></script>
+
+<script type="text/javascript" src="/js/plugins/bootstrap-table/export/xlsx.core.min.js"></script>
+
 <script type="text/javascript" src="/js/appjs/analysis/biological/biological.js"></script>
 </body>
 </html>
