--- a/mp-starter/src/main/resources/templates/analysis/biological.html
+++ b/mp-starter/src/main/resources/templates/analysis/biological.html
@@ -2,7 +2,8 @@
 <html lang="zh_CN" xmlns:th="http://www.thymeleaf.org"
       xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
 <meta charset="utf-8">
-<head th:include="include :: header"></head>
+<head th:include="include :: header">
+</head>
 <body class="gray-bg">
 <div class="wrapper wrapper-content ">
 
@@ -76,6 +77,8 @@
 
 <script type="text/javascript" src="/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="/js/plugins/bootstrap-table/bootstrap-table.min.js"></script>
+<script src="/js/plugins/bootstrap-table/locale/bootstrap-table-zh-CN.js"></script>
+
 <script type="text/javascript" src="/js/plugins/bootstrap-table/export/bootstrap-table-export.js"></script>
 
 <script type="text/javascript" src="/js/plugins/bootstrap-table/export/FileSaver.js"></script>
